# activitywatch-mcp-server-py

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  README.md  SECURITY.md  SESSION_SUMMARY.md  Taskfile.yaml  pyproject.toml
.github/workflows/: codeql.yml  release_gen.yml  test.yml
src/activitywatch_mcp_server_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_server_activitywatch/: __init__.py  __main__.py  server.py
src/mcp_server_activitywatch/prompts/: __init__.py  query_help.py
src/mcp_server_activitywatch/resources/: __init__.py  bucket_events.py  buckets.py
src/mcp_server_activitywatch/tools/: __init__.py  get_events.py  get_settings.py  list_buckets.py  query_examples.py  run_query.py
tests/: conftest.py  test_get_events.py  test_get_settings.py  test_list_buckets.py  test_run_query.py
