[project]
name = "mcp-server-activitywatch"
version = "2.0.0"
description = "A Model Context Protocol server providing tools to interact with ActivityWatch time tracking data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matt Vogel" }]
keywords = ["activitywatch", "mcp", "llm", "time-tracking", "model-context-protocol"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0,<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/8bitgentleman/activitywatch-mcp-server"
Repository = "https://github.com/8bitgentleman/activitywatch-mcp-server"
Issues = "https://github.com/8bitgentleman/activitywatch-mcp-server/issues"

[project.scripts]
mcp-server-activitywatch = "mcp_server_activitywatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pyright]
include = ["src"]
strict = ["src"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
