[project]
name = "mcp-server-activitywatch"
version = "2.0.0"
description = "A Model Context Protocol server providing tools to interact with ActivityWatch time tracking data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matt Vogel" }]
keywords = ["activitywatch", "mcp", "llm", "time-tracking", "model-context-protocol"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0,<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/8bitgentleman/activitywatch-mcp-server"
Repository = "https://github.com/8bitgentleman/activitywatch-mcp-server"
Issues = "https://github.com/8bitgentleman/activitywatch-mcp-server/issues"

[project.scripts]
mcp-server-activitywatch = "mcp_server_activitywatch.__init__:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
exclude = [".git", ".venv", "__pycache__", "build", "dist", ".uv-cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.tartufo]
repo-path = "."
regex = true
entropy = true
exclude-path-patterns = [
    {path-pattern = 'poetry.lock'},
    {path-pattern = 'pyproject.toml'},
    # To not have to escape `\` in regexes, use single quoted
    # TOML 'literal strings'
    {path-pattern = 'docs/source/(.*)\.rst'},
]
exclude-entropy-patterns = [
    {path-pattern = '\.github/workflows/.*\.yml', pattern = 'uses: .*@[a-zA-Z0-9]{40}', reason = 'GitHub Actions'},
    {path-pattern = 'poetry.lock', pattern = '.'},
    {path-pattern = 'Pipfile.lock', pattern = '.'},
    {path-pattern = 'README\.md', pattern = '.'},
    {path-pattern = 'index\.rst', pattern = '.'},
    {path-pattern = 'techstack\.yml', pattern = '.'},
    {path-pattern = 'techstack\.md', pattern = '.'},
]

[tool.uv]
cache-dir = ".uv-cache"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "pytest-pycharm",
    "ruff",
    "pre-commit",
    "vulture",
    "xenon",
    "typing_extensions",
    "pdoc3",
    "bandit",
    "whispers",
    "mdformat-gfm",
    "mdformat-frontmatter",
    "tartufo",
    "mdToRst",
    "setuptools",
    "pyright",
]

[tool.taskipy.tasks]
default = "task test"
commit = "task format && task security && task docs"
publish = "task security && task build && uv pip install ."
build = "task clean && task docs && git-changelog -p -a -x >> CHANGELOG.md && git add CHANGELOG.md && uv pip install ."
install = "uv pip install . --upgrade"
setup = "task install-hooks"
test = "uv run pytest --cov --cov-fail-under=80 tests/"
clean = "task clean"
format = "task format"
docs = "task docs"
security = "task security"
install-hooks = "task install-hooks"
remove-hooks = "task remove-hooks"
docker = "# Docker commands removed - using UV for deployment instead"

[tool.taskipy.install]
install = true
